--- a/.vitepress/theme/custom.css
+++ b/.vitepress/theme/custom.css
@@ -60,7 +60,7 @@
   vertical-align: middle;
 }
 
-#wwads-container {
+/* #wwads-container {
   position: relative;
   float: right;
   z-index: 9;
@@ -82,4 +82,4 @@
     right: 10px;
     margin: 0;
   }
-}
+} */
